--- a/less/homePage.less
+++ b/less/homePage.less
@@ -243,6 +243,9 @@
     flex-direction: column;
     margin: 1% 5% 1%;
     padding: 5% 0 5%;
+    @media @mobile {
+      width: 98%;
+    }
     img {
       width: 20%;
       border-radius: 50%;
@@ -322,8 +325,15 @@
       box-shadow: 10px 10px 5px rgba(0, 166, 153, 1);
     }
     @media @mobile {
-      width: 75vw;
+      width: 80vw;
       display: flex;
+      line-height: 1.5;
+      h1 {
+        font-size: 2.5rem;
+      }
+      h2 {
+        font-size: 1.8rem;
+      }
     }
     img {
       width: 40%;
@@ -345,7 +355,9 @@
         color: #00a699;
       }
       @media @mobile {
-        font-size: 5.5rem;
+        font-size: 3.5rem;
+        justify-content: center;
+        align-items: center;
       }
     }
     .PM {
